--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -324,3 +324,8 @@ footer.input-group-text{
   line-height: 24px;
   font-weight: 100;
 }
+
+/* Our Store */
+.filter-card{
+    /* hasfakasdf */
+}
