--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -246,6 +246,15 @@ footer.input-group-text{
   color: var(--color-777777);
 
 }
+.single-blog-card h3{
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+}
+.single-blog-card p{
+  color: var(--color-777777);
+  font-size: 14px;
+}
 /* Product Card */
 .product-card{
   padding: 15px;
