--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -635,10 +635,6 @@ footer.input-group-text{
   font-size: 14px;
   color: var(--color-777777);
 }
-
-
-
-
 .review-inner-wrapper{
   background-color: white;
   padding: 30px;
@@ -669,4 +665,44 @@ footer.input-group-text{
 }
 .review:not(:last-child){
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+/* Cart Page */
+.cart-header,
+.cart-data{
+  border-bottom: 1px solid #eaeaea;;
+}
+.cart-header h4{
+  font-size: 13px;
+  color: var(--color-777777);
+}
+.cart-col-1{
+  width: 40%;
+}
+.cart-col-1 p{
+  color: var(--color-777777);
+  font-size: 14px;
+}
+.cart-col-2{
+  width: 10%;
+}
+.cart-col-3{
+  width: 15%;
+}
+.cart-col-4{
+  width: 15%;
+}
+.cart-data h5.price{
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+}
+
+/* Shipping(Checkout) Page */
+.total{
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+}
+.total-price{
+  font-size: 16px;
+  color: var(--color-777777);
 }
