--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -276,12 +276,13 @@ footer.input-group-text{
 .product-card .product-image > img:last-child{
   display: none;
 }
-.product-card:hover .product-image>img:nth-child(1){
+/* .product-card:hover .product-image>img:nth-child(1){
   display: none ;
-}
-.product-card:hover .product-image>img:last-child{
+} */
+/* .product-card:hover .product-image>img:last-child{
   display: block;
-}
+} */
+
 .product-card:hover .action-bar{
   right: 15px;
 }
